# amp-showcase-pharma-test-drive

./: .gitignore  pyproject.toml
src/pharma_no_code_trigger/: crew.py  lookup.py  main.py  notify.py
src/pharma_no_code_trigger/data/: sites.json
src/pharma_test_drive/: crew.py  lookup.py  main.py  notify.py  surface.py
