[project]
name = "pharma-test-drive"
version = "0.1.0"
description = "Pharma Test Drive — clinical site vetting from a shared no-code surface."
requires-python = ">=3.10"
dependencies = [
    "crewai[anthropic]>=1.14.7,<2",
]

[project.scripts]
kickoff = "pharma_test_drive.main:kickoff"

[tool.crewai]
type = "flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_test_drive"]
